1.Sort tests were improved